Closed
Bug 1192654
Opened 10 years ago
Closed 10 years ago
"Save As" crashes on cnn.com (and anything else with iframes from nonpersistable URI schemes)
Categories
(Firefox :: General, defect)
Tracking
()
RESOLVED
FIXED
Firefox 43
| Tracking | Status | |
|---|---|---|
| firefox41 | --- | unaffected |
| firefox42 | --- | fixed |
| firefox43 | --- | fixed |
People
(Reporter: simon.lindholm10, Assigned: jld)
References
(
URL
)
Details
(Keywords: crash, regression)
Crash Data
Attachments
(1 file, 1 obsolete file)
|
4.54 KB,
patch
|
jld
:
review+
Sylvestre
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
1. Visit http://edition.cnn.com/.
2. Press Ctrl+S, choose some file name, press enter.
-> Firefox crashes from a null pointer dereference.
https://crash-stats.mozilla.com/report/index/2d5f445b-a70e-4b63-a8ac-5b3882150809
mozregress gives https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=2fad09a0540d&tochange=91de9c670800 which contains bug 1101100 as an obvious suspect.
| Assignee | ||
Updated•10 years ago
|
Assignee: nobody → jld
| Assignee | ||
Comment 1•10 years ago
|
||
Here's a more self-contained example: data:text/html,<iframe%20src="data:text/plain,Example">
I was *sure* I tested this case....
URL: data:text/html,<iframe%20src="data:te...
Summary: "Save As" crashes on cnn.com → "Save As" crashes on cnn.com (and anything else with iframes from nonpersistable URI schemes)
| Assignee | ||
Comment 2•10 years ago
|
||
The fix is tiny, but I also added a test case (adapted from the one for bug 1170334) and checked that it reproduces the crash without this fix.
Attachment #8646554 -
Flags: review?(wmccloskey)
Comment on attachment 8646554 [details] [diff] [review]
Patch: restore null pointer check
Review of attachment 8646554 [details] [diff] [review]:
-----------------------------------------------------------------
Thanks for the test.
::: embedding/test/test_bug1192654.html
@@ +59,5 @@
> + }
> + };
> + wbp.saveDocument(doc, tmpFile, tmpDir, null, 0, 0);
> +
> + function cleanUp() {
Maybe use registerCleanupFunction for this just in case the test fails?
Attachment #8646554 -
Flags: review?(wmccloskey) → review+
| Assignee | ||
Comment 4•10 years ago
|
||
Thanks for the review. Updated patch; carrying over r+.
Attachment #8646554 -
Attachment is obsolete: true
Attachment #8647007 -
Flags: review+
| Assignee | ||
Comment 5•10 years ago
|
||
Checkin needed. https://treeherder.mozilla.org/#/jobs?repo=try&revision=c1b34194f4cf is from before I adjusted the test (comment #3), but I retested it locally.
Keywords: checkin-needed
Keywords: checkin-needed
Whiteboard: [fixed-in-fx-team]
| Assignee | ||
Updated•10 years ago
|
status-firefox41:
--- → unaffected
status-firefox42:
--- → affected
status-firefox43:
--- → affected
| Assignee | ||
Comment 7•10 years ago
|
||
Comment on attachment 8647007 [details] [diff] [review]
Patch: restore null pointer check [v1.1]
Approval Request Comment
[Feature/regressing bug #]: Bug 1101100
[User impact if declined]: Crashes when using Save As on popular websites (see comment #0)
[Describe test coverage new/current, TreeHerder]: This patch adds a regression test, and there are some existing tests for nsWebBrowserPersist.
[Risks and why]: Basically none; this patch won't do anything except in the case that was previously crashing.
[String/UUID change made/needed]: None.
Attachment #8647007 -
Flags: approval-mozilla-aurora?
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Whiteboard: [fixed-in-fx-team]
Target Milestone: --- → Firefox 43
Comment 9•10 years ago
|
||
Comment on attachment 8647007 [details] [diff] [review]
Patch: restore null pointer check [v1.1]
Fix a crash, taking it.
Attachment #8647007 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•10 years ago
|
||
Flags: in-testsuite+
Updated•10 years ago
|
Crash Signature: [@ nsWebBrowserPersist::OnWalk::VisitDocument(nsIWebBrowserPersistDocument*, nsIWebBrowserPersistDocument*) ]
Keywords: crash
You need to log in
before you can comment on or make changes to this bug.
Description
•