Bug 1192654 - Fix nsWebBrowserPersist handling of nonpersistable subdocuments. r=billm, a=sledru

The patch for bug 1101100, in converting this code to be asynchronous
and distributed, accidentally dropped the check for `data` being null;
this patch restores it, and adds a regression test.

--HG--
extra : transplant_source : %C6%B9%B5%F5%C6%C6%21z%DC%E1mp%95k%EAK%A4%9Awf